Schools UI, alignment adjustments, various fixes

--- a/beams/src/App.css
+++ b/beams/src/App.css
@@ -39,3 +39,8 @@
   padding-top: 30px;
   margin-left: -16px;
 }
+
+.RightAlign{
+  position: absolute;
+  text-align: right;
+}
