--- a/beams/src/pages/SuburbPage.css
+++ b/beams/src/pages/SuburbPage.css
@@ -56,6 +56,24 @@
   padding-left: 5px;
 }
 
+.SchoolsText{
+  padding-top: 2px;
+  padding-left: 20px;
+}
+
+.SchoolsTextSub{
+  position: absolute;
+  padding-top: 30px;
+  padding-left: 68px;
+}
+
+.ScrollMenu{
+  width: 100%;
+  max-height: 500px;
+  overflow-y: auto;
+  padding: 10px;
+}
+
 .MainText{
   vertical-align: 20px;
   padding-left: 14px;
